objects/AW_CustomTimeBasedNotification__c.object
<CustomObject>
    <description>Creates custom-time based notification record. The created record is used to send custom time-based notification so that owners can convert the record that is in use by workflow.</description>
    <fields>
        <fullName>AW_CustomNotificationAPIName__c</fullName>
        <description>Stores custom notification API name.</description>
        <label>Custom Notification API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_NotificationBody__c</fullName>
        <description>Stores notification body.</description>
        <label>Notification Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AW_NotificationDateTime__c</fullName>
        <description>Provides Date Time reference to scheduled path.</description>
        <label>Notification Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_NotificationTitle__c</fullName>
        <description>Stores notification title.</description>
        <label>Notification Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_NotificationType__c</fullName>
        <description>Picklist field that stores the notification type.</description>
        <label>Notification Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AW_PlainEmail</fullName>
                    <label>Plain Email</label>
                </value>
                <value>
                    <fullName>AW_RichTextEmail</fullName>
                    <label>Rich Text Email</label>
                </value>
                <value>
                    <fullName>AW_InAppPush</fullName>
                    <label>In-App / Push</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_ParentId__c</fullName>
        <description>Stores parent record Id.</description>
        <externalId>true</externalId>
        <label>Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Recipients__c</fullName>
        <description>Stores notification recipients (comma-separated) Ids.</description>
        <label>Recipients (comma-separated)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_SenderId__c</fullName>
        <description>Stores sender Id.</description>
        <label>Sender Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_TargetId__c</fullName>
        <description>Stores target Id.</description>
        <label>Target Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_TargetPageReference__c</fullName>
        <description>Stores target page reference.</description>
        <label>Target Page Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Time-Based Notification</label>
    <nameField>
        <displayFormat>CTBN-{00000000}</displayFormat>
        <label>Custom Time Based Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Time-Based Notifications</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AW_NotificationBodyRequired</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(AW_NotificationBody__c) = 0</errorConditionFormula>
        <errorMessage>Notification body cannot be empty.</errorMessage>
    </validationRules>
</CustomObject>